[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Question1.gd" type="Script" id=1]
[ext_resource path="res://art/Question.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.00392157, 0.341176, 0.0666667, 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.439216, 0, 0, 1 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.419608, 0.0156863, 0.0156863, 1 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.439216, 0.0156863, 0.0156863, 1 )

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 287.652, 511.941 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 153.924
margin_top = 95.9503
margin_right = 644.924
margin_bottom = 191.95
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quantos banheiros tem
 dentro do parque?
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 93.8215
margin_top = 262.471
margin_right = 269.821
margin_bottom = 317.471
custom_styles/pressed = SubResource( 2 )
custom_fonts/font = SubResource( 6 )
text = "Dois"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CanvasLayer"]
margin_left = 311.895
margin_top = 259.812
margin_right = 483.895
margin_bottom = 319.812
custom_styles/pressed = SubResource( 3 )
custom_fonts/font = SubResource( 7 )
text = "Nenhum"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="CanvasLayer"]
margin_left = 312.998
margin_top = 167.985
margin_right = 484.998
margin_bottom = 222.985
custom_styles/pressed = SubResource( 4 )
custom_fonts/font = SubResource( 8 )
text = "Cinco"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="CanvasLayer"]
margin_left = 90.2704
margin_top = 164.719
margin_right = 268.27
margin_bottom = 227.719
custom_styles/pressed = SubResource( 5 )
custom_fonts/font = SubResource( 9 )
text = "TrÃªs"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer/Button" method="_on_Button_pressed"]
