[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Question1.gd" type="Script" id=1]
[ext_resource path="res://art/Question.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/Kenney High.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/Kenney High Square.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.458824, 0.00784314, 0.00784314, 1 )

[sub_resource type="DynamicFont" id=6]
size = 25
outline_size = 2
outline_color = Color( 0.435294, 0.435294, 0.435294, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.364706, 0.0470588, 1 )

[sub_resource type="DynamicFont" id=7]
size = 25
outline_size = 2
outline_color = Color( 0.443137, 0.443137, 0.443137, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.431373, 0, 0, 1 )

[sub_resource type="DynamicFont" id=8]
size = 26
outline_size = 2
outline_color = Color( 0.403922, 0.403922, 0.403922, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.466667, 0.00392157, 0.00392157, 1 )

[sub_resource type="DynamicFont" id=9]
size = 24
outline_size = 2
outline_color = Color( 0.411765, 0.411765, 0.411765, 1 )
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 287.652, 511.941 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 91.6286
margin_top = 111.353
margin_right = 511.629
margin_bottom = 174.353
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A quem o parque Trianon homenageia?
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 73.1853
margin_top = 260.09
margin_right = 275.185
margin_bottom = 315.09
custom_styles/pressed = SubResource( 2 )
custom_fonts/font = SubResource( 6 )
text = "Brigadeiro Luiz Antônio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CanvasLayer"]
margin_left = 302.476
margin_top = 257.619
margin_right = 519.476
margin_bottom = 317.619
custom_styles/pressed = SubResource( 3 )
custom_fonts/font = SubResource( 7 )
text = "Tenente Siqueira Campos"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="CanvasLayer"]
margin_left = 312.998
margin_top = 167.985
margin_right = 484.998
margin_bottom = 222.985
custom_styles/pressed = SubResource( 4 )
custom_fonts/font = SubResource( 8 )
text = "Padre João Manuel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="CanvasLayer"]
margin_left = 90.2704
margin_top = 164.719
margin_right = 268.27
margin_bottom = 227.719
custom_styles/pressed = SubResource( 5 )
custom_fonts/font = SubResource( 9 )
text = "Tenente Azevedo"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Button2" to="CanvasLayer/Button2" method="_on_Button2_pressed"]
