[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Question1.gd" type="Script" id=1]
[ext_resource path="res://art/Question.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 21
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.454902, 0, 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 17
outline_size = 1
outline_color = Color( 0.486275, 0.486275, 0.486275, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.392157, 0, 0, 1 )

[sub_resource type="DynamicFont" id=7]
size = 17
outline_size = 1
outline_color = Color( 0.470588, 0.470588, 0.470588, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.607843, 0, 0, 1 )

[sub_resource type="DynamicFont" id=8]
size = 22
outline_size = 1
outline_color = Color( 0.486275, 0.486275, 0.486275, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.00392157, 0.4, 0.0117647, 1 )

[sub_resource type="DynamicFont" id=9]
size = 21
outline_size = 1
outline_color = Color( 0.509804, 0.501961, 0.501961, 1 )
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 287.652, 511.941 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 142.082
margin_top = 97.8039
margin_right = 616.082
margin_bottom = 160.804
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "O parque possui resquício de
 que tipo de floresta?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 63.1062
margin_top = 256.478
margin_right = 296.106
margin_bottom = 311.478
custom_styles/pressed = SubResource( 2 )
custom_fonts/font = SubResource( 6 )
text = "Floresta Amazônica"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CanvasLayer"]
margin_left = 305.153
margin_top = 253.819
margin_right = 518.153
margin_bottom = 313.819
custom_styles/pressed = SubResource( 3 )
custom_fonts/font = SubResource( 7 )
text = "Não Possui Nenhum"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="CanvasLayer"]
margin_left = 316.744
margin_top = 176.226
margin_right = 488.744
margin_bottom = 231.226
custom_styles/pressed = SubResource( 4 )
custom_fonts/font = SubResource( 8 )
text = "Pampas"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="CanvasLayer"]
margin_left = 73.4373
margin_top = 170.238
margin_right = 295.437
margin_bottom = 233.238
custom_styles/pressed = SubResource( 5 )
custom_fonts/font = SubResource( 9 )
text = "Mata Atlântica"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Button4" to="CanvasLayer/Button4" method="_on_Button4_pressed"]
